Next release
------------

- Includeme docstring fix.

0.2 (2011-08-24)
----------------

- Depend on the ``zodburi`` package rather than implementing our own URI
  resolvers and datatypes.

0.1 (2011-08-14)
----------------

- Initial release.