@@ -62,7 +62,7 @@ copyright = '2011, Agendaless Consulting <chrism@plope.com>'
 # other places throughout the built documents.
 #
 # The short X.Y version.
-version = '0.2'
+version = '0.3dev'
 # The full version, including alpha/beta/rc tags.
 release = version
 
