@@ -5,6 +5,18 @@ envlist =
 [testenv]
 commands = 
     python setup.py test -q
+deps = 
+    ZODB3
+    pyramid>=1.3
+    WebOb>=1.2dev
+    transaction>=1.2
+
+[testenv:py25]
+deps =
+    ZODB3
+    pyramid<1.2.99
+    WebOb<1.1.99
+    transaction<1.1.99
 
 [testenv:cover]
 basepython =
@@ -12,6 +24,10 @@ basepython =
 commands = 
     python setup.py nosetests --with-xunit --with-xcoverage
 deps =
+    ZODB3
+    pyramid>=1.3
+    WebOb>=1.2dev
+    transaction>=1.2
     nose
     coverage==3.4
     nosexcover
